添加greendao数据库功能，主要记录退出时的总分情况，便于后期进行总分排名功能

--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-<body>
-<p>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <style type="text/css">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <style type="text/css">
     body
     {
         background-color : #5d2b17;
@@ -12,42 +10,47 @@
         background-position:0% 0%;
         background-size:cover;
         background-repeat:no-repeat;
-        margin:0;
+        margin:10px;
     }
+
     img
     {
         float:center;
-        margin-right:8px;
-        height:72px;
-    }
-    p{
-        line-height:10dp
+        margin-right:16px
     }
 
-        </style>
-    </head>
-    <script type="text/javascript">
+    p{
+        line-height:10dp;
+        color:white;
+        font-size:16px;
+        font-family:"Arial"
+    }
+
+    </style>
+</head>
+<script type="text/javascript">
         function changeVersion(myVersion)
         {
             document.getElementById("version").innerHTML =myVersion;
         }
-    </script>
-    <br>
-</p>
-<center><img src="icon.png"/></center></br>
-<font color=#ff0000><b>软件名称</b>：Slot</font></br>
-<b>软件版本</b>：<span id="version">null</span></br>
-<b>作者: SamBrother</b></br>
-<b>简介</b>：<font color=#ff0000>Slot水果机---仿花果水果机UI,主要作为游戏开发练手项目!</font></br></br>
-<font color="green"><b>玩法介绍</b></font>
-<p><font color="blue">1.倍率：</font><font color="white">苹果*5，左边的橘子*10、芒果*15、铃铛*20三种倍率，右边的西瓜*20、双星*30、77*20三种倍率。</font></br></p>
-<p><font color="#9c27b0">2.猜大小：</font><font color="white">押中后会进入比倍模式。可选择'1-6'或'8-13'两种按钮，只要猜对奖金就翻倍。猜大小前可选择左箭头或右箭头按钮，调整参与游戏的奖金数。
-    玩家中奖后可以进行猜大小。如果猜中，则会赢取玩家在中奖额区相同的金币。玩家猜中大小后可以续猜。</font></br></p>
-<p><font color="#009688">3.特别奖励：</font><font color="white">有机会获得随机送灯、大四喜、小三元、大三元、天女散花、九莲宝灯、开火车、大满贯等幸运彩金。</font></br></p>
-<p><font color="#c41411">4.押注：</font><font color="white">游戏中的物品有八种，分别是：苹果、橘子、芒果、铃铛、西瓜、双星、77、Bar。</font></br></p>
-<p><font color="#673ab7">5.划拨：</font><font color="white">玩家在中奖之后可以将中奖区的金额划拨到当前余额区，也可以进行猜大小操作。</font></br></p>
-<p><font color="#3f51b5">6.下注：</font><font color="white">在游戏的下方为押注区，押注区中列出各种物品和相关的倍率。每种物品的下方都有押注按钮，每次点击增加一个筹码注金。</font></br></p>
-<p><font color="#00bcd4">7.开始游戏：</font><font color="white">当玩家下注完成后首次点击'GO'按钮游戏开始，当玩家在中奖后未点击下注区其他按钮时再次点击'GO'按钮，表示默认上次下注的情况进行续押操作。
-    如果玩家需要重新押注，直接在押注区重新选择需要下注的物品即可，同时余额区的金币数会随押注的情况进行相应的变化。</font></br></p>
+
+</script>
+
+<body>
+<p><center><img src="icon.png" width="72" height="72"/></center></p>
+<p><font color=#ff0000><b>软件名称</b>：Slots</font></p>
+<p><b>软件版本</b>：<span id="version">null</span></p>
+<p><b>作者: SamBrother</b></p>
+<p><b>简介</b>：<font color=#ff0000>Slot水果机---仿花果水果机UI，主要作为游戏开发练手项目，请勿用作商业目的，谢谢！！</font></p>
+<p><font color="green"><b>玩法介绍</b></font></p>
+<p><font color="blue">1.倍率：</font>苹果*5，左边的橘子*10、芒果*15、铃铛*20三种倍率，右边的西瓜*20、双星*30、77*20三种倍率。</p>
+<p><font color="#9c27b0">2.猜大小：</font>押中后会进入比倍模式。可选择'1-6'或'8-13'两种按钮，只要猜对奖金就翻倍。猜大小前可选择左箭头或右箭头按钮，调整参与游戏的奖金数。
+    玩家中奖后可以进行猜大小。如果猜中，则会赢取玩家在中奖额区相同的金币。玩家猜中大小后可以续猜。</p>
+<p><font color="#009688">3.特别奖励：</font>有机会获得随机送灯、大四喜、小三元、大三元、天女散花、九莲宝灯、开火车、大满贯等幸运彩金。</p>
+<p><font color="#c41411">4.押注：</font>游戏中的物品有八种，分别是：苹果、橘子、芒果、铃铛、西瓜、双星、77、Bar。</p>
+<p><font color="#673ab7">5.划拨：</font>玩家在中奖之后可以将中奖区的金额划拨到当前余额区，也可以进行猜大小操作。</p>
+<p><font color="#3f51b5">6.下注：</font>在游戏的下方为押注区，押注区中列出各种物品和相关的倍率。每种物品的下方都有押注按钮，每次点击增加一个筹码注金。</p>
+<p><font color="#00bcd4">7.开始游戏：</font>当玩家下注完成后首次点击'GO'按钮游戏开始，当玩家在中奖后未点击下注区其他按钮时再次点击'GO'按钮，表示默认上次下注的情况进行续押操作。
+    如果玩家需要重新押注，直接在押注区重新选择需要下注的物品即可，同时余额区的金币数会随押注的情况进行相应的变化。</p>
 </body>
 </html>
