--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -23,40 +23,47 @@ ul{color:red;}
         font-family:"italic"
     }
 
+
     </style>
-<script type="text/javascript">
+    <script type="text/javascript">
         function changeVersion(myVersion)
         {
             document.getElementById("version").innerHTML =myVersion;
         }
 
-</script>
+
+    </script>
 </head>
 <body>
-<p><center><img src="icon.png" alt="app_icon" width="72" height="72"/></center></p>
+<p>
+<center><img src="icon.png" alt="app_icon" width="72" height="72"/></center>
+</p>
 <div>
-<h3>软件名称：Slots</h3>
-<h3>软件版本:<span id="version">null</span></h3>
-<h3>作者: SamBrother</h3>
+    <h4>软件名称：Slots</h4>
+    <h4>软件版本：<span id="version">null</span></h4>
+    <h4>作者: SamBrother</h4>
+    <h4>简介：</h4><p>Slots是仿当年流行的水果老虎机的Android版本，主要是为了学习Android游戏开发的练手项目，项目中的UI图片来至于Higoo公司的花果水果机</p>
 </div>
 <div>
-<h2>玩法介绍</h2>
-<p>1.倍率：苹果*5，左边的橘子*10、芒果*15、铃铛*20三种倍率，右边的西瓜*20、双星*30、77*20三种倍率。两组倍率由上面的LED灯决定。</p>
-<p>2.猜大小：押中后会进入比倍模式。可选择'1-6'或'8-13'两种按钮，只要猜对奖金就翻倍。猜大小前可选择左箭头或右箭头按钮，调整参与游戏的奖金数。
-    玩家中奖后可以进行猜大小。如果猜中，则会赢取玩家在中奖额区相同的金币。玩家猜中大小后可以续猜。</p>
-<p>3.特别奖励：有机会获得随机送灯、大四喜、小三元、大三元、天女散花、九莲宝灯、开火车、大满贯等幸运彩金。</p>
-<p>4.押注：在游戏的下方为押注区，押注区中列出各种物品和相关的倍率。每种物品的下方都有押注按钮，每次点击增加一个筹码注金。游戏中的物品有八种，分别是：苹果、橘子、芒果、铃铛、西瓜、双星、77、Bar。</p>
-<p>5.划拨：玩家在中奖之后可以将中奖区的金额划拨到当前余额区，也可以进行猜大小操作。</p>
-<p>6.开始游戏：当玩家下注完成后首次点击'GO'按钮游戏开始，当玩家在中奖后未点击下注区其他按钮时再次点击'GO'按钮，表示默认上次下注的情况进行续押操作。
-    如果玩家需要重新押注，直接在押注区重新选择需要下注的物品即可，同时余额区的金币数会随押注的情况进行相应的变化。</p>
-<h2>免责声明</h2>
-<p>本游戏的UI图片来自花果网络科技有限公司(Higoo)开发的花果水果机，请勿将此UI图片应用于任何商业目的，如若因此涉及相关法律问题与本人概不相关，谢谢！</p>	
+    <h3>玩法介绍</h3>
+    <p>1.倍率：苹果*5，左边的橘子*10、芒果*15、铃铛*20三种倍率，右边的西瓜*20、双星*30、77*20三种倍率。两组倍率由上面的LED灯决定。</p>
+    <p>2.猜大小：押中后会进入比倍模式。可选择'1-6'或'8-13'两种按钮，只要猜对奖金就翻倍。猜大小前可选择左箭头或右箭头按钮，调整参与游戏的奖金数。
+        玩家中奖后可以进行猜大小。如果猜中，则会赢取玩家在中奖额区相同的金币。玩家猜中大小后可以续猜。</p>
+    <p>3.特别奖励：有机会获得随机送灯、大四喜、小三元、大三元、天女散花、九莲宝灯、开火车、大满贯等幸运彩金。</p>
+    <p>
+        4.押注：在游戏的下方为押注区，押注区中列出各种物品和相关的倍率。每种物品的下方都有押注按钮，每次点击增加一个筹码注金。游戏中的物品有八种，分别是：苹果、橘子、芒果、铃铛、西瓜、双星、77、Bar。</p>
+    <p>5.划拨：玩家在中奖之后可以将中奖区的金额划拨到当前余额区，也可以进行猜大小操作。</p>
+    <p>6.开始游戏：当玩家下注完成后首次点击'GO'按钮游戏开始，当玩家在中奖后未点击下注区其他按钮时再次点击'GO'按钮，表示默认上次下注的情况进行续押操作。
+        如果玩家需要重新押注，直接在押注区重新选择需要下注的物品即可，同时余额区的金币数会随押注的情况进行相应的变化。</p>
+    <p>7.当玩家的当前金币数小于10个时，系统会自动补发100个金币给玩家以供玩家继续游戏！</p>
+    <h3>免责声明</h3>
+    <p>本游戏的UI图片来自花果网络科技有限公司(Higoo)开发的花果水果机，请勿将此UI图片应用于任何商业目的，如若因此涉及相关法律问题与本人概不相关，谢谢！</p>
 </div>
 <div>
-<ul>
-<li>Email:765247593@qq.com</li>
-<li>反馈：如有任何反馈信息请联系上面的Email！</li>
-</ul>
+    <ul>
+        <li>Email:765247593@qq.com</li>
+        <li>反馈：如有任何反馈信息请联系上面的Email！</li>
+    </ul>
 </div>
 </body>
 </html>
