优化RankActivity显示历史记录功能

--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -11,27 +11,38 @@
         background-repeat:no-repeat;
         margin:10px;
     }
-h2{color:green;
-font-family:Arial;}
-h3{color:white;
-font-family:Sans-serif;}
-ul{color:red;}
-    p{
+
+    h3
+    {
+        color:green;
+        font-family:Arial;
+    }
+
+    h4
+    {
+        color:white;
+        font-family:Sans-serif;
+    }
+
+    ul
+    {
+        color:red;
+    }
+
+    p
+    {
         line-height:10dp;
         color:white;
         font-size:16px;
         font-family:"italic"
     }
-
-
     </style>
+
     <script type="text/javascript">
         function changeVersion(myVersion)
         {
             document.getElementById("version").innerHTML =myVersion;
         }
-
-
     </script>
 </head>
 <body>
@@ -42,7 +53,8 @@ ul{color:red;}
     <h4>软件名称：Slots</h4>
     <h4>软件版本：<span id="version">null</span></h4>
     <h4>作者: SamBrother</h4>
-    <h4>简介：</h4><p>Slots是仿当年流行的水果老虎机的Android版本，主要是为了学习Android游戏开发的练手项目，项目中的UI图片来至于Higoo公司的花果水果机</p>
+    <h4>简介：</h4>
+    <p>Slots是仿当年流行的水果老虎机的Android版本，主要是为了学习Android游戏开发的练手项目，项目中的UI图片来至于Higoo公司的花果水果机</p>
 </div>
 <div>
     <h3>玩法介绍</h3>
