--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -9,11 +9,8 @@
         background-size:100% 100%;
         background-repeat:no-repeat;
         margin:10px;
-		background-image:url('bg.jpg');
+	background-image:url('ss.jpg');
     }
-	img{
-		opacity:0.1;
-	}
     h5
     {
         color:green;
