--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -9,17 +9,8 @@
         background-size:100% 100%;
         background-repeat:no-repeat;
         margin:10px;
-	background-image:url('ss.jpg');
-    }
-    h5
-    {
-        color:green;
-        font-family:Arial;
-    }
-    h6
-    {
-        color:white;
-        font-family:Sans-serif;
+	    background-image:url('bg_about.png');
+	    backgroud:transparent;
     }
     ul
     {
@@ -30,8 +21,8 @@
     {
         line-height:10dp;
         color:white;
-        font-size:12px;
-        font-family:"italic"
+        font-size:14px;
+        font-family:"italic";
     }
     </style>
 
@@ -40,21 +31,21 @@
         {
             document.getElementById("version").innerHTML =myVersion;
         }
+
     </script>
 </head>
 <body>
 <p>
-<center><img src="icon.jpg" alt="app_icon" width="72" height="72"/></center>
+<center><img src="icon.png" alt="app_icon" width="64" height="64"/></center>
 </p>
 <div>
-    <h6>软件名称：Slots</h6>
-    <h6>软件版本：<span id="version">null</span></h6>
-    <h6>作者: SamBrother</h6>
-    <h6>简介：</h6>
-    <p>Slots是仿当年流行的水果老虎机的Android版本，主要是为了学习Android游戏开发的练手项目，项目中的UI图片来至于Higoo公司的花果水果机</p>
+    <p>软件名称：Slots</p>
+    <p>软件版本：<span id="version">null</span></p>
+    <p>作者: SamBrother</p>
+    <p>简介：Slots是仿当年流行的水果老虎机的Android版本，主要是为了学习Android游戏开发的练手项目，项目中的UI图片来至于Higoo公司的花果水果机。</p>
 </div>
 <div>
-    <h5>玩法介绍</h5>
+    <p>玩法介绍</p>
     <p>1.倍率：苹果*5，左边的橘子*10、芒果*15、铃铛*20三种倍率，右边的西瓜*20、双星*30、77*20三种倍率。两组倍率由上面的LED灯决定。</p>
     <p>2.猜大小：押中后会进入比倍模式。可选择'1-6'或'8-13'两种按钮，只要猜对奖金就翻倍。猜大小前可选择左箭头或右箭头按钮，调整参与游戏的奖金数。
         玩家中奖后可以进行猜大小。如果猜中，则会赢取玩家在中奖额区相同的金币。玩家猜中大小后可以续猜。</p>
@@ -65,7 +56,7 @@
     <p>6.开始游戏：当玩家下注完成后首次点击'GO'按钮游戏开始，当玩家在中奖后未点击下注区其他按钮时再次点击'GO'按钮，表示默认上次下注的情况进行续押操作。
         如果玩家需要重新押注，直接在押注区重新选择需要下注的物品即可，同时余额区的金币数会随押注的情况进行相应的变化。</p>
     <p>7.当玩家的当前金币数小于10个时，系统会自动补发100个金币给玩家以供玩家继续游戏！</p>
-    <h5>免责声明</h5>
+    <p>免责声明</p>
     <p>本游戏的UI图片来自花果网络科技有限公司(Higoo)开发的花果水果机，请勿将此UI图片应用于任何商业目的，如若因此涉及相关法律问题与本人概不相关，谢谢！</p>
 </div>
 <div>
